--- a/src/tar/src/nmt/en_es.yaml
+++ b/src/tar/src/nmt/en_es.yaml
@@ -28,10 +28,10 @@ embeddings_type: "GloVe"
 word_vec_size: 300
 
 save_model: /content/gdrive/MyDrive/data/exp/model.en-es
-save_checkpoint_steps: 1000
+save_checkpoint_steps: 3000
 keep_checkpoint: 3
 seed: 3435
-train_steps: 500000
+train_steps: 100000
 valid_steps: 10000
 warmup_steps: 8000
 report_every: 100
@@ -63,6 +63,9 @@ max_generator_batches: 2
 param_init: 0.0
 param_init_glorot: 'true'
 position_encoding: 'true'
+
+# this param is used to start from a check_point
+train_from: model.en-es_step_60000.pt
 
 world_size: 1
 gpu_ranks:
