--- a/src/tar/requirements.txt
+++ b/src/tar/requirements.txt
@@ -32,6 +32,7 @@ rsa==4.7
 sacremoses==0.0.35
 sentencepiece==0.1.95
 six==1.15.0
+stanza==1.2
 subword-nmt==0.3.7
 tensorboard==2.4.1
 tensorboard-plugin-wit==1.8.0
@@ -44,4 +45,3 @@ urllib3==1.26.3
 waitress==1.4.4
 Werkzeug==1.0.1
 zipp==3.4.0
-
